--- a/protego/package.json
+++ b/protego/package.json
@@ -3,11 +3,17 @@
   "version": "1.1.1",
   "description": "finalProject: An Ionic project",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.1",
+    "client-sessions": "^0.7.0",
+    "cors": "^2.8.1",
+    "express": "^4.15.2",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "mongoose": "^4.9.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
