--- a/protego/package.json
+++ b/protego/package.json
@@ -13,7 +13,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "mongoose": "^4.9.2"
+    "mongoose": "^4.9.2",
+    "spotcrime": "^1.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
